Module5 JVM integration progress (bootstrap)